# starling-pipeline

./: .dockerignore  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-compuse.prod.yml  env.example
.github/workflows/: deploy.yml
dashboard/: dockerfile  pyproject.toml
dashboard/app/: constants.py  dash_test.py  dashboard.py  poll.py  test_poll.py
dashboard/tests/: test_days_left.py
database/: database.sql  index.sql
database/index/: stg.dim_dates.indexes.sql  stg.transactions.indexes.sql
database/schema/: landing.sql  semantic.sql
database/tables/: lnd.balance.sql  lnd.spaces.sql  lnd.transactions_api_pull.sql  lnd.transactions_webhook.sql  stg.balance.sql  stg.dim_dates.sql  stg.dim_spaces.sql  stg.transactions.sql
database/views/: sem.available.sql  sem.spending.sql
orchestrator/: dockerfile  pyproject.toml
orchestrator/app/: constants.py  main.py
orchestrator/app/flows/: balance.py  main_pipe.py  spaces.py  transactions.py
orchestrator/app/tasks/: api_calls.py  sql.py
orchestrator/app/utils/: __init__.py
webhook/: dockerfile  gunicorn_config.py  pyproject.toml
webhook/app/: constants.py  models.py  trigger.py  webhook.py
webhook/app/utils/: logging_config.py
webhook/tests/: test_models.py
